[Exercise-7] Set up test env file and use in test container

--- a/.env.test
+++ b/.env.test
@@ -5,6 +5,6 @@ FLASK_ENV=development
 # Change the following values for local development.
 SECRET_KEY=secret-key
 
-TRELLO_API_KEY = 
-TRELLO_TOKEN = 
-BOARD_ID = tDnBFCaA
+TRELLO_API_KEY=123abc
+TRELLO_TOKEN=abc123
+BOARD_ID=tDnBFCaA
