--- a/.github/workflows/my-ci-pipeline.yml
+++ b/.github/workflows/my-ci-pipeline.yml
@@ -8,4 +8,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: docker build --target test --tag todo-app:test .
-    - run: docker run --env-file ./.env --publish 80:8000 todo-app:test
+    - run: docker run --env-file ./.env.test --publish 80:8000 todo-app:test
